tdf#142017 set default focus widget

Change-Id: I5befe345d9c6ec499efdc1cf8305513ee8a53690
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115062
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>